# m5core2-basic-idf

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  sdkconfig
main/: CMakeLists.txt  main.cpp
main/gui/: ui.c  ui.h  ui_helpers.c  ui_helpers.h  ui_img_img_arrow_right_png.c  ui_img_img_bg_1_png.c  ui_img_img_btc_png.c  ui_img_img_card_png.c  ui_img_img_eth_png.c  ui_img_img_pos_png.c  ui_img_img_qr_png.c  ui_img_img_xrp_png.c  ui_img_m5logo2022_png.c  ui_img_ok_png.c
